tsconfig added and some folder structure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "description": "A Discord bot, that manages your quotes",
   "version": "1.0.0",
   "main": "main.ts",
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^4.6.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
